fix(settings): align elements into a flex column

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -17,7 +17,7 @@ body.light {
 }
 
 body {
-    padding: 0, 10px;
+    padding: 0 10px;
     margin: 0;
     background-color: var(--body-background-color);
     color: var(--body-color);
@@ -171,12 +171,24 @@ main {
 }
 
 .settings-panel {
+    position: absolute;
+    top: 100%;
+    right: 0;
     color: var(--body-color);
-    width: 100px;
-    height: 100vh;
+    width: 260px;
+    height: auto;
     background-color: var(--body-background-color);
-    border: 4px solid red;
+    border: 2px solid var(--body-color);
+    padding: 15px;
+    box-shadow: 0px 8px 16px rgba(0,0,0,0.3);
+    border-radius: 4px;
     /* padding: 20px red; */
+}
+
+.settings-panel form {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
 }
 
 summary svg {
